--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+  height: 100vh;
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-container{
+  width: 100%;
+  height: 100px;
+  background-color: black;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;
+  padding: 40px 24px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+header{
+  height: 30px;
+  color: white;
+  font-size: x-large;
+  font-weight: bolder;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input{
+  min-width: 300px;
+  max-width: 100vh;
+  height: 30px;
+  background-color: white;
+  border-radius: 5px;
+  color: black;
+  font-size: 16px;
+  padding: 6px 16px;
+  margin-top: 12px;
+}
+
+.search-history-text{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: white;
+  color: black;
+  padding: 4px;
+}
+
+.clr-btn{
+  height: 28px;
+  width: 60px;
+  background-color: rgb(187, 20, 20);
+  border-radius: 5px;
+  color: white;
+  padding: 4px;
+  border: none;
+  margin: 4px;
+}
+
+.dialog {
+  box-shadow: 0 8px 6px -6px black;
+  position: static;
+  left: 20%;
+  top: 10%;
+}
+
+.image-container{
+  display: flex;
+}
+
+img{
+  flex: 33.33%;
+  width: 20rem;
+  height: 15rem;
+  margin: 2.5rem;
+  background-color: #d3d3d3;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  object-fit: cover;
 }
